cluster-argo/ingress-multiservice.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "argocd"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: http
    host: argocd.stg.showks.cloudnativedays.jp
  tls:
  - hosts:
    - argocd.stg.showks.cloudnativedays.jp
    secretName: tls-certificate

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "argocd-grpc"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
    host: argocd-grpc.stg.showks.cloudnativedays.jp
  tls:
  - hosts:
    - argocd-grpc.stg.showks.cloudnativedays.jp
    secretName: tls-certificate
